Closed
Bug 311442
Opened 20 years ago
Closed 20 years ago
Location Bar history matching causes Camino to freeze.
Categories
(Camino Graveyard :: Location Bar & Autocomplete, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino1.0
People
(Reporter: graeme, Assigned: sfraser_bugs)
References
Details
(Keywords: fixed1.8)
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b5) Gecko/20051006 Camino/1.0a1+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b5) Gecko/20051006 Camino/1.0a1+
From Console.app
-[NSBigMutableString getCharacters:range:] called with out-of-bounds range....
Reproducible: Always
Steps to Reproduce:
1. In the Location Bar type the beginning of an url
2. Press down to browse the url matches in your history
Actual Results:
Camino spins with rainbow cursor.
Expected Results:
Not freeze and autocomplete the url.
Comment 1•20 years ago
|
||
hrm, i haven't seen this. did something here change recently?
| Assignee | ||
Updated•20 years ago
|
Assignee: mikepinkerton → sfraser_bugs
Status: UNCONFIRMED → NEW
Ever confirmed: true
Target Milestone: --- → Camino1.0
| Assignee | ||
Comment 2•20 years ago
|
||
I fumbled some string fu. Fix:
Index: src/browser/AutoCompleteTextField.mm
===================================================================
RCS file: /cvsroot/mozilla/camino/src/browser/AutoCompleteTextField.mm,v
retrieving revision 1.41
diff -u -r1.41 AutoCompleteTextField.mm
--- src/browser/AutoCompleteTextField.mm 5 Oct 2005 20:24:03 -0000 1.41
+++ src/browser/AutoCompleteTextField.mm 7 Oct 2005 01:24:02 -0000
@@ -750,7 +750,7 @@
if (aLocation > curLength) // sanity check or AppKit crashes
return;
- if ((aLocation + [aString length] == curLength) && [curValue compare:aString
options:0 range:NSMakeRange(aLocation, curLength)] == NSOrderedSame)
+ if ((aLocation + [aString length] == curLength) && [curValue compare:aString
options:0 range:NSMakeRange(aLocation, [aString length])] == NSOrderedSame)
return; // nothing to do
Status: NEW → ASSIGNED
| Assignee | ||
Comment 3•20 years ago
|
||
Fixed in both places.
Comment 4•20 years ago
|
||
*** Bug 311757 has been marked as a duplicate of this bug. ***
Comment 5•20 years ago
|
||
*** Bug 313966 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•