Fix bug 311442: exception because of bad string offsets in compare when changing text in the url bar.